# sparkle-server-archive

./: .gitignore  Cargo.toml  LICENSE  Procfile  Procfile.dev  README.md  RustConfig  app.json  bsconfig.json  elixir_buildpack.config  mix.exs  package-lock.json  package.json  tailwind.config.js  webpack.common.js  webpack.dev.js  webpack.prod.js
assets/: package.json
assets/css/: app.css
assets/js/: app.js  metrics.js
client/: App.bs.js  App.res  main.bs.js  main.res
client/page/: Home.bs.js  Home.res  Metrics.jsx
client/shared/: Models.bs.js  Models.res
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: sparkle_server.ex  sparkle_server_web.ex
lib/sparkle_server/: accounts.ex  application.ex  apps.ex  cms.ex  mailer.ex  profiles.ex  repo.ex  scheduler.ex
lib/sparkle_server_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
migrations/2021-12-24-232928_create_users/: up.sql
migrations/2021-12-24-233226_create_apps/: up.sql
migrations/2021-12-24-233359_create_versions/: up.sql
migrations/2021-12-24-233716_create_system_profiles/: down.sql  up.sql
migrations/2021-12-24-233956_create_metrics/: down.sql  up.sql
migrations/2021-12-29-035951_add_build_to_versions/: down.sql  up.sql
migrations/2022-01-08-012247_add_unique_index_to_metrics/: down.sql  up.sql
priv/repo/: seeds.exs
src/: db.rs  lib.rs  main.rs  routes.rs
src/middleware/: mod.rs
src/models/: app.rs  metric.rs  mod.rs  schema.rs  system_profiles.rs  user.rs  (+1 more)
templates/: admin.html  appcast.xml  index.html  layout.html  login.html
test/: test_helper.exs
(+62 files in other folders)
