[package]
name = "sparkle-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
env_logger = "0.8"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
tera = { version = "1.8.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }